@@ -2,19 +2,20 @@ package com.googlecode.linkedlisp.functions.list;
 
 import java.lang.reflect.Array;
 import java.util.Iterator;
+import java.util.List;
 
 import com.googlecode.linkedlisp.Function;
 import com.googlecode.linkedlisp.ListExpression;
-import com.googlecode.linkedlisp.State;
+import com.googlecode.linkedlisp.Environment;
 import com.hp.hpl.jena.rdf.model.RDFList;
 
 public class Car extends Function {
 
     @Override
-	public Object execute(State s, ListExpression params) throws Exception {
-        Object value = params.getFirst().evaluate(s);
+	public Object execute(Environment s, List params) throws Exception {
+        Object value = s.evaluate(params.get(0));
         if (value == null) {
-            System.out.println(params.getFirst());
+            System.out.println(params.get(0));
             return null;
         }
         else if (value instanceof Iterable) {
